[package]
name = "rustify-renderer"
version = "0.1.0"
authors = ["Atushi17 <harshps1704@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement", "DomRect",
    "Headers", "Request", "RequestInit", "RequestMode", "Response",
    "Location", "NodeList", "History",
] }
gloo-timers = { version = "0.3", features = ["futures"] }

[build-dependencies]
dotenvy = "0.15"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
